reduce java version from 22  to 11